So far, this is the least 'wrong' solution. No stretching issues on the first rotation but I get an empty bar at the bottom of portrait mode with minimal URL bar

--- a/no-iframe/styles.css
+++ b/no-iframe/styles.css
@@ -1,6 +1,7 @@
 html {
     height: 100vh;
     background-color: #1d292c;
+    height: -webkit-fill-available;
 }
 body {
     margin: 0;
@@ -11,6 +12,7 @@ body {
     font-family: Helvetica, arial, sans-serif;
     position: relative;
     width: 100%;
+    height: -webkit-fill-available;
 }
 
 #application-canvas {
